k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: infrastore
  namespace: infrastore
  labels:
    app: infrastore
spec:
  selector:
    app: infrastore
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  type: ClusterIP
