k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infrastore-ingress
  namespace: infrastore
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: infrastore.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infrastore
            port:
              number: 80
